Fixed overflow and tentang's font-weight

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -9,7 +9,10 @@
 
 html { 
     scroll-behavior: smooth; 
+    overflow-x: hidden;
 }
+
+
 
 * {
     margin: 0;
@@ -28,8 +31,7 @@ nav {
     position: fixed;
     display: flex;
     flex-direction: row;
-    width: 100vw;
-    height: 4h;
+    width: 100%;
 }
 
 a {
@@ -56,6 +58,7 @@ h5 {
 
 p {
     font-size: var(--p-fz);
+    font-weight: 500;
 }
 
 .tentang {
@@ -175,14 +178,14 @@ button {
 }
 
 .countdownText {
-    width: 23vw;
+    width: 23%;
     background-color: transparent;
     text-shadow: 3px 3px  5px black;
     font-family: "Red Hat Display", sans-serif;
 }
 
 .countdownDot {
-    width: 2vw;
+    width: 2%;
     background-color: transparent;
     color: black;
 
@@ -209,7 +212,7 @@ button {
     border-top: 1px solid black;
     background-size: 100% 100%;
     height: 55vh;
-    width: 99vw;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
